tests/invalid_ast_samples/3ea606b5c05ede738f7f7c33dc9ad02e0dfe9da2ab12e44c9bea55e10afa4be1.py
from ast import *

tree = Module(body=[Delete(targets=[])], type_ignores=[])

# version: 3.9.15
# seed = 4634023
#
# Source:
# del
#
#
# Error:
#     SyntaxError('invalid syntax', ('<file>', 1, 5, 'del \n'))
